force-app/main/default/objects/Agreement__c/fields/Agreement_Admin_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Admin_Mailbox__c</fullName>
    <description>For internal system notifications</description>
    <inlineHelpText>For internal system notifications</inlineHelpText>
    <label>Agreement Admin Mailbox</label>
    <type>Email</type>
</CustomField>