force-app/main/default/objects/Agreement__c/fields/Agreement_Format__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Format__c</fullName>
    <description>old formula:</description>
    <formula>RecordType.Name</formula>
    <inlineHelpText>IF(CONTAINS(RecordType.Name,&#39;Enabling Agreement&#39;) , LEFT( RecordType.Name , LEN( RecordType.Name ) - LEN(&#39; Enabling Agreement&#39; )), RecordType.Name)</inlineHelpText>
    <label>Agreement Format</label>
    <type>Text</type>
</CustomField>