force-app/main/default/objects/Agreement__c/fields/Agreement_Owner__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Owner__c</fullName>
    <formula>Owner:User.FirstName + &#39; &#39; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Owner</label>
    <type>Text</type>
</CustomField>