force-app/main/default/objects/Agreement__c/fields/Agreement_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Recipient__c</fullName>
    <description>Who gets this contract?</description>
    <inlineHelpText>Who does contract administrator issue contract to? Default = Sales Rep</inlineHelpText>
    <label>Agreement Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>