force-app/main/default/objects/Agreement__c/fields/Contact_for_Confirmations__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Confirmations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact for Confirmations</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>