force-app/main/default/objects/Agreement__c/fields/Contact_for_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Invoices__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact for Invoices</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements (Contact for Invoices)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>