force-app/main/default/objects/Agreement__c/fields/Contact_for_Notices__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Notices__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact for Notices</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements (Contact for Notices)</relationshipLabel>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>