force-app/main/default/objects/Agreement__c/fields/Dynamic_TC_Text_Group__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_TC_Text_Group__c</fullName>
    <description>OLD FORMULA:
IF(RecordType.Name == &#39;Version 4.1 Enabling Agreement&#39;
  , &#39;0&#39;
  , IF( OR(RecordType.Name == &#39;NAESB 2006 Enabling Agreement&#39;, RecordType.Name == &#39;Version 4 Enabling Agreement&#39;, RecordType.Name == &#39;Version 3.2 Enabling Agreement&#39;)
      , &#39;1&#39;
      , &#39;2&#39;
    )
)</description>
    <formula>IF( OR(RecordType.Name == &#39;Version 4.1 Enabling Agreement&#39;, RecordType.Name == &#39;NAESB 2006 V1.2 Enabling Agreement&#39;)
  , &#39;0&#39;
  , IF (RecordType.Name == &#39;Version 4 Enabling Agreement&#39;
      , &#39;1&#39;
      , IF( OR(RecordType.Name == &#39;NAESB 2006 Enabling Agreement&#39;, RecordType.Name == &#39;Version 3.2 Enabling Agreement&#39;)
          , &#39;2&#39;
          , &#39;3&#39;
        )
    )
)</formula>
    <label>Dynamic TC Text Group</label>
    <type>Text</type>
</CustomField>