force-app/main/default/objects/Agreement__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>The effective date of this agreement.</description>
    <inlineHelpText>The effective date of this agreement.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>