force-app/main/default/objects/Agreement__c/fields/Internal_Account__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Internal Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Internal Account)</relationshipLabel>
    <relationshipName>Agreements1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>