force-app/main/default/objects/Agreement__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any notes pertaining to this request. ex. Consultant margins, language negotiations in process, etc.</description>
    <inlineHelpText>Any notes pertaining to this request. ex. Consultant margins, language negotiations in process, etc.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>