force-app/main/default/objects/Agreement__c/fields/NSB_01_2_Transaction_Procedure__c.field-meta.xml
<CustomField>
    <fullName>NSB_01_2_Transaction_Procedure__c</fullName>
    <label>01.2 Transaction Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oral</fullName>
                <default>true</default>
                <label>Oral</label>
            </value>
            <value>
                <fullName>Written Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>