force-app/main/default/objects/Agreement__c/fields/NSB_02_31_Spot_Price_Publication__c.field-meta.xml
<CustomField>
    <fullName>NSB_02_31_Spot_Price_Publication__c</fullName>
    <defaultValue>&quot;Gas Daily Midpoint&quot;</defaultValue>
    <label>02.31 Spot Price Publication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>