force-app/main/default/objects/Agreement__c/fields/NSB_02_7_Confirm_Deadline__c.field-meta.xml
<CustomField>
    <fullName>NSB_02_7_Confirm_Deadline__c</fullName>
    <defaultValue>2</defaultValue>
    <label>02.7 Confirm Deadline-Bus days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>