force-app/main/default/objects/Agreement__c/fields/NSB_02_8_Confirming_Party__c.field-meta.xml
<CustomField>
    <fullName>NSB_02_8_Confirming_Party__c</fullName>
    <label>02.8 Confirming Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller</fullName>
                <default>true</default>
                <label>Seller</label>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>