force-app/main/default/objects/Agreement__c/fields/NSB_03_2_Performance_Obligation__c.field-meta.xml
<CustomField>
    <fullName>NSB_03_2_Performance_Obligation__c</fullName>
    <label>03.2 Performance Obligation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cover Standard</fullName>
                <default>true</default>
                <label>Cover Standard</label>
            </value>
            <value>
                <fullName>Spot Price Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>