force-app/main/default/objects/Agreement__c/fields/NSB_06_Taxes__c.field-meta.xml
<CustomField>
    <fullName>NSB_06_Taxes__c</fullName>
    <label>06 Taxes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer Pays At and After Delivery Point</fullName>
                <default>true</default>
                <label>Buyer Pays At and After Delivery Point</label>
            </value>
            <value>
                <fullName>Seller Pays Before and At Delivery Point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>