force-app/main/default/objects/Agreement__c/fields/NSB_07_2_Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>NSB_07_2_Method_of_Payment__c</fullName>
    <label>07.2 Method of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wire Transfer</fullName>
                <default>true</default>
                <label>Wire Transfer</label>
            </value>
            <value>
                <fullName>Automated Clearinghouse Credit (ACH)</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>