force-app/main/default/objects/Agreement__c/fields/NSB_07_2_Payment_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>NSB_07_2_Payment_Day_of_Month__c</fullName>
    <defaultValue>25</defaultValue>
    <label>07.2 Payment Day of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>