force-app/main/default/objects/Agreement__c/fields/NSB_07_7_Netting__c.field-meta.xml
<CustomField>
    <fullName>NSB_07_7_Netting__c</fullName>
    <label>07.7 Netting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Netting applies</fullName>
                <default>true</default>
                <label>Netting applies</label>
            </value>
            <value>
                <fullName>Netting does not apply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>