force-app/main/default/objects/Agreement__c/fields/NSB_10_2_Additional_Events_of_Default__c.field-meta.xml
<CustomField>
    <fullName>NSB_10_2_Additional_Events_of_Default__c</fullName>
    <label>10.2 Additional Events of Default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Additional Events of Default</fullName>
                <default>true</default>
                <label>No Additional Events of Default</label>
            </value>
            <value>
                <fullName>Indebtedness Cross Default</fullName>
            </value>
            <value>
                <fullName>Transactional Cross Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>