force-app/main/default/objects/Agreement__c/fields/NSB_10_3_1_Early_Termination_Damage__c.field-meta.xml
<CustomField>
    <fullName>NSB_10_3_1_Early_Termination_Damage__c</fullName>
    <label>10.3.1 Early Termination Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Termination Damages Apply</fullName>
                <default>true</default>
                <label>Early Termination Damages Apply</label>
            </value>
            <value>
                <fullName>Early Termination Damages Do Not Apply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>