force-app/main/default/objects/Agreement__c/fields/NSB_10_3_2_Other_Agreements_Setoffs__c.field-meta.xml
<CustomField>
    <fullName>NSB_10_3_2_Other_Agreements_Setoffs__c</fullName>
    <label>10.3.2 Other Agreements Setoffs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes-Bilateral</fullName>
                <default>true</default>
                <label>Yes-Bilateral</label>
            </value>
            <value>
                <fullName>Yes-Triangular</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>