force-app/main/default/objects/Agreement__c/fields/NSB_15_10_Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>NSB_15_10_Confidentiality__c</fullName>
    <label>15.10 Confidentiality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confidentiality Applies</fullName>
                <default>true</default>
                <label>Confidentiality Applies</label>
            </value>
            <value>
                <fullName>Confidentiality Does Not Apply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>