force-app/main/default/objects/Agreement__c/fields/NSB_15_5_Choice_of_Law__c.field-meta.xml
<CustomField>
    <fullName>NSB_15_5_Choice_of_Law__c</fullName>
    <defaultValue>&quot;TX&quot;</defaultValue>
    <label>15.5 Choice of Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_List</valueSetName>
    </valueSet>
</CustomField>