force-app/main/default/objects/Agreement__c/fields/Special_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Special_Provisions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Provisions</label>
    <type>Checkbox</type>
</CustomField>