force-app/main/default/objects/Agreement__c/fields/V_Net_Terms__c.field-meta.xml
<CustomField>
    <fullName>V_Net_Terms__c</fullName>
    <defaultValue>IF(CONTAINS($RecordType.DeveloperName, &#39;NAESB&#39;), 10, 20)</defaultValue>
    <label>V Net Terms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>