force-app/main/default/objects/Agreement__c/recordTypes/Acquisition_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Acquisition_Enabling_Agreement</fullName>
    <active>true</active>
    <label>Acquisition Enabling Agreement</label>
</RecordType>