force-app/main/default/objects/Agreement__c/recordTypes/AEM_Base_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>AEM_Base_Enabling_Agreement</fullName>
    <active>true</active>
    <label>AEM Base Enabling Agreement</label>
</RecordType>