force-app/main/default/objects/Agreement__c/recordTypes/AEM_Purchase_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>AEM_Purchase_Enabling_Agreement</fullName>
    <active>true</active>
    <label>AEM Purchase Enabling Agreement</label>
</RecordType>