force-app/main/default/objects/Agreement__c/recordTypes/AEM_Sales_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>AEM_Sales_Enabling_Agreement</fullName>
    <active>true</active>
    <label>AEM Sales Enabling Agreement</label>
</RecordType>