force-app/main/default/objects/Agreement__c/recordTypes/AEM_Small_Service_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>AEM_Small_Service_Enabling_Agreement</fullName>
    <active>true</active>
    <label>AEM Small Service Enabling Agreement</label>
</RecordType>