force-app/main/default/objects/Agreement__c/recordTypes/CNP_Exhibit_A_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>CNP_Exhibit_A_Enabling_Agreement</fullName>
    <active>true</active>
    <label>CNP Exhibit A Enabling Agreement</label>
</RecordType>