force-app/main/default/objects/Agreement__c/recordTypes/Consultant_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Consultant_Agreement</fullName>
    <active>true</active>
    <label>Consultant Agreement</label>
</RecordType>