force-app/main/default/objects/Agreement__c/recordTypes/Customer_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Customer_Enabling_Agreement</fullName>
    <active>true</active>
    <label>Customer Enabling Agreement</label>
</RecordType>