force-app/main/default/objects/Agreement__c/recordTypes/Energon_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Energon_Enabling_Agreement</fullName>
    <active>true</active>
    <label>Energon Enabling Agreement</label>
</RecordType>