force-app/main/default/objects/Agreement__c/recordTypes/GISB_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>GISB_Enabling_Agreement</fullName>
    <active>true</active>
    <label>GISB Enabling Agreement</label>
</RecordType>