force-app/main/default/objects/Agreement__c/recordTypes/NAESB_2002_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>NAESB_2002_Enabling_Agreement</fullName>
    <active>true</active>
    <label>NAESB 2002/GISB Enabling Agreement</label>
</RecordType>