force-app/main/default/objects/Agreement__c/recordTypes/NAESB_2006_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>NAESB_2006_Enabling_Agreement</fullName>
    <active>true</active>
    <label>NAESB 2006 Enabling Agreement</label>
</RecordType>