force-app/main/default/objects/Agreement__c/recordTypes/NAESB_2006_V1_2_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>NAESB_2006_V1_2_Enabling_Agreement</fullName>
    <active>true</active>
    <label>NAESB 2006 V1.2 Enabling Agreement</label>
</RecordType>