force-app/main/default/objects/Agreement__c/recordTypes/NAESB_2007_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>NAESB_2007_Enabling_Agreement</fullName>
    <active>true</active>
    <label>NAESB 2007 Enabling Agreement</label>
</RecordType>