force-app/main/default/objects/Agreement__c/recordTypes/Nordic_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Nordic_Enabling_Agreement</fullName>
    <active>true</active>
    <label>Nordic Enabling Agreement</label>
</RecordType>