force-app/main/default/objects/Agreement__c/recordTypes/Other_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Other_Enabling_Agreement</fullName>
    <active>true</active>
    <label>Other Enabling Agreement</label>
</RecordType>