force-app/main/default/objects/Agreement__c/recordTypes/Version_1_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Version_1_Enabling_Agreement</fullName>
    <active>true</active>
    <label>Version 1 Enabling Agreement</label>
</RecordType>