force-app/main/default/objects/Agreement__c/recordTypes/Version_3_2_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Version_3_2_Enabling_Agreement</fullName>
    <active>true</active>
    <label>Version 3.2 Enabling Agreement</label>
</RecordType>