force-app/main/default/objects/Agreement__c/recordTypes/Version_4_Enabling_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Version_4_Enabling_Agreement</fullName>
    <active>true</active>
    <label>Version 4 Enabling Agreement</label>
</RecordType>