force-app/main/default/objects/Agreement__c/validationRules/Consultant_Agree_on_Consultants.validationRule-meta.xml
<ValidationRule>
    <fullName>Consultant_Agree_on_Consultants</fullName>
    <active>true</active>
    <description>Validates that an agreement configured as a consultant agreement is related to a Consultant account.</description>
    <errorConditionFormula>OR(
AND(RecordType.DeveloperName = &#39;Consultant_Agreement&#39;
,  AND(TEXT(Account__r.Type) != &#39;Paid Consultant&#39;,TEXT(Account__r.Type) != &#39;Non-Paid Consultant&#39;))

, 

AND(RecordType.DeveloperName != &#39;Consultant_Agreement&#39;,  
OR(TEXT(Account__r.Type) = &#39;Paid Consultant&#39;,TEXT(Account__r.Type) = &#39;Non-Paid Consultant&#39;)))</errorConditionFormula>
    <errorMessage>AG01: Consultant agreements can only be configured on Consultant accounts.</errorMessage>
</ValidationRule>