force-app/main/default/objects/Agreement__c/validationRules/Lock_Account_field_after_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Account_field_after_creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Profile.Name !=  &quot;System Administrator&quot;,
    AND(
      ISCHANGED(Account__c),
      NOT(ISBLANK(PRIORVALUE(Account__c)))
    )
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Agreement cannot be reassigned to a different Account</errorMessage>
</ValidationRule>